refactor: update logging and observability components
- Changed `event_type` to `eventType` in `AuditWriter` and JSON emitted structure for consistency.
- Updated package structure from `br.com.vsjr.labs.log` to `br.com.vsjr.labs.observability`.
- Removed metrics collection from `LogInterceptor` and updated related documentation.
- Enhanced `LogEvento` to normalize text fields and handle null details.
- Added unit tests for `LogEvento` and `LogSistematico` to ensure proper normalization and logging behavior.
- Updated application properties to enable JSON logging by default and disable metrics.
- Refactored various classes to improve naming consistency and clarity in logging context.